[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "2"
napi-derive = "2"
image = "0.25.5"
rav1e = "0.7.1"
x264 = "0.5.0"
mp4 = "0.14.0"
[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
