[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
image       = "0.25.5"
mp4         = { version = "0.14.0" }
napi        = { version = "2" }
napi-derive = "2"
rav1e       = { version = "0.7.1"}
x264        = { version = "0.5.0" }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
